# 2d_lighting_prototype

./: CMakeLists.txt  README.md  TODO.txt
lib/tinyobjloader-c/: tinyobj_loader_c.c
models/: grass.vox  lava.vox  lighthouse.vox  rock1.vox  rock2.vox  rock3.vox  rock4.mtl  rock4.vox  rock5.mtl  rock5.vox  sand.vox  tree1.vox  tree2.vox  tree3.vox  water.vox
shaders/: composite.frag  highlight.frag  highlight.vert  light.frag  main_model.frag  model.vert  ray_edge.frag  ray_light.frag  sampler.comp  topdown_light.frag  topdown_model.frag
src/: camera.c  camera.h  config.h  database.c  database.h  helpers.c  helpers.h  main.c  model.c  model.h  renderer.c  renderer.h  world.c  world.h
